# KnowledgeGraph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_VESPA_EMAIL_PIPELINE.md  SCHEMA_REFACTOR_IMPLEMENTATION_SUMMARY.md  SCHEMA_REFACTOR_TASKS.md  debug_merge.py  docker-compose.yml  entity_config.yaml  extract_temp.py  extract_temp_simple.py  main.py  merge_config.yaml  print_persons.py  pylance.md  pyproject.toml  query_search.py  requirements.txt  schema.yaml  template.py
docs/: configuration.md  directory_structure.md  pipeline.md  scripts.md  unified_table_architecture.md
research/: trials.ipynb
src/workspace_kg/components/: embedder.py  entity_extractor.py  ollama_embedder.py  systematic_merge_provider.py
src/workspace_kg/config/: configuration.py
src/workspace_kg/pipeline/: extract_pipeline.py  vespa_email_pipeline.py
src/workspace_kg/scripts/: kuzu_init.py  print_persons.py
src/workspace_kg/utils/: entity_config.py  kuzu_db_handler.py  merge_config.py  merge_handler.py  merge_pipeline.py  output_formatter.py  prompt.py  prompt_factory.py  vespa_integration.py
