[tool.poetry]
name = "knowledgegraph"
version = "0.1.0"
description = ""
authors = ["Shaik Sirajuddin"]
readme = "README.md"
packages = [{include = "workspace_kg", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"